[package]
name = "yupass"
version = "0.1.0"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
serde = { version = "*", features = ["derive"] }
rand = "0.7.3"
ed25519-dalek = { version = "*", features = ["serde"] }
structopt = "*"
enigo = "*"
dirs = "*"
yubico_manager = "*"
base64 = "*"
gpgme = "*"
reqwest = { version = "*", features = ["blocking"] }
console = "*"
anyhow = "*"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.2.1"

[target.'cfg(not(windows))'.dependencies]
copypasta-ext = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
