[package]
name = "yupass"
version = "0.1.3"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
serde = { version = "*", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
structopt = "*"
crypto_box = { version = "*", features = ["std"] }
enigo = "*"
dirs = "*"
reqwest = { version = "*", features = ["blocking"] }
yubico_manager = "*"
base64 = "*"
gpgme = "*"
console = { version = "*", default-features = false }
anyhow = "*"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.2.1"

[target.'cfg(not(windows))'.dependencies]
copypasta-ext = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
